# sparrow-app

./: .env.docker-setup  .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .secrets  .vars  CHANGELOG.md  Dockerfile  README.md  SelfHost-Sparrow-Web.Dockerfile  Sparrow-Web.Dockerfile  Sparrowweb.Dockerfile  Storybook.Dockerfile  docker-compose.yml  eslint.config.js  funding.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  snapcraft.yaml  snapcraft.yaml.in  sonar-project.properties  sparrow.adml  sparrow.admx  sukruth-m  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1697614593560-713db69213216.mjs  vite.config.ts.timestamp-1700632162633-b5a598e7f8bd8.mjs  workflow_deletion_script.sh
.github/: CODEOWNERS  issue_template.md  pr-build-whitelist.yml  sparrow-bot.json  whitelist.yml
.github/ISSUE_TEMPLATE/: --bug-report.yaml  --feature-request.yaml
.github/profile/: README.md
.github/workflows/: app-store.yml  approval-check.yml  cleanup-pr-preview.yml  design-system.yml  development.yaml  feat-sparrow-refactoring.yaml  firbase.yml  github-to-jira.yml  linux-build.yml  mac-release.yml  main.yml  market-release.yml  pr-build-trigger.yml  pr-preview-cleanup.yml  pr-release.yaml  pr-title-check.yaml  publish-mac.yaml  publish-win.yaml  publish.yaml  pull_request_template.md  release-please.yml  release.yaml  releaseyaml  snap-build.yml  sonarqube-test.yml  sonarqube.yaml  sonarqube.yml  sparrow-app-development.yml  sparrow-app-marketplace.yml  sparrow-app-pr-build.yml  sparrow-app-prod.yaml  sparrow-app-staging.yml  sparrow-app-test-pipeline.yml  sparrow-appinstaller-prod.yaml  sparrow-bot.yml  sparrow-msix-workflow.yml  sparrow-plans.yml  sparrow-storybook-dev.yml  sparrow-storybook-prod.yml  sparrow-web-design-system.yml  (+14 more)
.husky/: commit-msg  pre-commit
.well-known/: funding-manifest-urls
apps/@desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/@sparrow-admin/: README.md  index.html  package.json
apps/@sparrow-desktop/: .env.example  .eslintrc.json  README.md  index.html  (+5 more)
apps/@sparrow-desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  agpl-3.0.txt  name: sparrow.yaml  tauri.conf.json
apps/@sparrow-desktop/src-tauri/assets/: AIRegistry.wxs  CleanupOnUninstall.wxs  DeepLinkRegistryEntries.wxs  LinuxDeeplink.template  LoginRegistry.wxs  Sparrow_Desktop.provisionprofile  Sparrow_Desktop_1.provisionprofile  WorkspaceRegistry.wxs  sparrow.provisionprofile  test.wxs  testAdmxV1.py  testAdmxV2.py
apps/@sparrow-desktop/src-tauri/assets/AdmxAdmlSupport/: AdmxAdmlCreator.py  sparrow.admx
apps/@sparrow-desktop/src-tauri/assets/AdmxAdmlSupport/en-US/: sparrow.adml
apps/@sparrow-desktop/src-tauri/capabilities/: migrated.json
apps/@sparrow-desktop/src-tauri/icons/: icon.icns
apps/@sparrow-desktop/src-tauri/src/: group_policy_config.rs  main.rs  oauth_window.rs  raw_handler.rs  response_serializer.rs  response_temp_file.rs  url_fetch_handler.rs
apps/@sparrow-desktop/src-tauri/src/request_handler/: formdata_handler_v2.rs  mod.rs  urlencoded_handler_v2.rs
apps/@sparrow-desktop/src-tauri/src/utils/: response_decoder.rs
docker-entrypoint.d/: 10-runtime-rewrite.sh
docs/: CODEOWNERS.md  CODE_PATTERNS.md  CONTRIBUTING.md  ENVIRONMENT_VARIABLE_GUIDE.md  MAINTAINERS.md  SELF_HOST.md  pull_request_template.md
scripts/: sync-version.js
src/: App.svelte  db.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/: DeepLinkRegistryEntries.wxs
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  formdata_handler.rs  json_handler.rs  lib.rs  main.rs  main1.rs  raw_handler.rs  url_fetch_handler.rs  urlencoded_handler.rs
src-tauri/src/request_handler/: formdata_handler_v2.rs  http_requests.rs  json_handler_v2.rs  mod.rs  urlencoded_handler_v2.rs
src-tauri/src/utils/: mod.rs  response_decoder.rs
suggestions/: Khushiagra1234.md
(+969 files in other folders)
