[package]
name = "sparrow-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-focus", "os-all", "window-center", "window-set-size", "window-unminimize", "window-start-dragging", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
regex = "1.4.6"
dotenv = "0.15"
nfd = "0.0.4"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
